# AI-Hackathon

./: .env.example  .gitignore  .replit  LOCALHOST_SETUP.md  README.md  ai_classifier.py  app.py  email_service.py  models.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  seed_data.py  ticket_assignment.py
static/css/: style.css
static/js/: main.js
templates/: admin_dashboard.html  admin_tickets.html  approval_form.html  approval_result.html  base.html  change_password.html  create_ticket.html  login.html  manage_categories.html  manage_team_members.html  manage_users.html  team_member_dashboard.html  user_dashboard.html  view_ticket.html
